--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "png-itxt",
-  "version": "2.0.0",
+  "name": "png-itxt-streamer",
+  "version": "2.0.1",
   "description": "Adding and reading png iTXt data with streams",
   "main": "index.js",
   "scripts": {
@@ -10,21 +10,26 @@
     "browsertests": "phantomjs test/browser-test/test_webpage.js"
   },
   "author": "Finn Pauls",
+  "maintainers": [
+    {
+      "name": "SteveGY",
+      "url": "https://github.com/stevegy/png-itxt-streamer"
+    }
+  ],
   "license": "MIT",
   "bin": {
     "png-itxt": "./bin/png-itxt"
   },
   "dependencies": {
     "commander": "^2.9.0",
-    "duplexer": "^0.1.1",
-    "pako": "^0.2.8",
-    "png-chunk-stream": "^1.0.1",
-    "through2": "^0.6.1"
+    "duplexer": "^0.1.2",
+    "pako": "^2.1.0",
+    "through2": "^4.0.2"
   },
   "devDependencies": {
-    "browserify": "^12.0.1",
-    "standard": "^5.4.1",
-    "tape": "^3.0.0"
+    "browserify": "^17.0.1",
+    "standard": "^17.1.2",
+    "tape": "^5.9.0"
   },
   "testling": {
     "files": "test/*.test.js",
@@ -37,10 +42,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/finnp/png-itxt.git"
+    "url": "https://github.com/stevegy/png-itxt-streamer.git"
   },
   "bugs": {
-    "url": "https://github.com/finnp/png-itxt/issues"
+    "url": "https://github.com/stevegy/png-itxt-streamer/issues"
   },
-  "homepage": "https://github.com/finnp/png-itxt"
+  "homepage": "https://github.com/stevegy/png-itxt-streamer"
 }
