--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "commander": "^2.9.0",
     "duplexer": "^0.1.2",
     "pako": "^2.1.0",
+    "png-chunk-streamer": "^1.1.2",
     "through2": "^4.0.2"
   },
   "devDependencies": {
